--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   modal_bottom_sheet: ^2.0.0
+  equatable: ^2.0.3
+  collection: ^1.15.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
